// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseClientCommand build cmd:   'phero-client build --help' 1`] = `
Object {
  "command": "build",
  "name": "help",
}
`;

exports[`parseClientCommand build cmd:   'phero-client build --verbose' 1`] = `
Object {
  "name": "build",
  "server": Object {
    "url": "http://localhost:3030",
  },
  "verbose": true,
}
`;

exports[`parseClientCommand build cmd:   'phero-client build -h' 1`] = `
Object {
  "command": "build",
  "name": "help",
}
`;

exports[`parseClientCommand build cmd:   'phero-client build http://localhost:1234 --verbose' 1`] = `
Object {
  "name": "build",
  "server": Object {
    "url": "http://localhost:1234",
  },
  "verbose": true,
}
`;

exports[`parseClientCommand build cmd:   'phero-client build http://localhost:1234' 1`] = `
Object {
  "name": "build",
  "server": Object {
    "url": "http://localhost:1234",
  },
  "verbose": false,
}
`;

exports[`parseClientCommand build cmd:   'phero-client build' 1`] = `
Object {
  "name": "build",
  "server": Object {
    "url": "http://localhost:3030",
  },
  "verbose": false,
}
`;

exports[`parseClientCommand common cmd:   'phero-client --help' 1`] = `
Object {
  "command": undefined,
  "name": "help",
}
`;

exports[`parseClientCommand common cmd:   'phero-client --version' 1`] = `
Object {
  "name": "version",
}
`;

exports[`parseClientCommand common cmd:   'phero-client -h' 1`] = `
Object {
  "command": undefined,
  "name": "help",
}
`;

exports[`parseClientCommand common cmd:   'phero-client -v' 1`] = `
Object {
  "name": "version",
}
`;

exports[`parseClientCommand watch cmd:   'phero-client watch --help' 1`] = `
Object {
  "command": "watch",
  "name": "help",
}
`;

exports[`parseClientCommand watch cmd:   'phero-client watch --port 1234' 1`] = `
Object {
  "name": "watch",
  "port": 1234,
  "server": Object {
    "url": "http://localhost:3030",
  },
  "verbose": false,
}
`;

exports[`parseClientCommand watch cmd:   'phero-client watch --verbose' 1`] = `
Object {
  "name": "watch",
  "port": 4040,
  "server": Object {
    "url": "http://localhost:3030",
  },
  "verbose": true,
}
`;

exports[`parseClientCommand watch cmd:   'phero-client watch -h' 1`] = `
Object {
  "command": "watch",
  "name": "help",
}
`;

exports[`parseClientCommand watch cmd:   'phero-client watch -p 1234' 1`] = `
Object {
  "name": "watch",
  "port": 1234,
  "server": Object {
    "url": "http://localhost:3030",
  },
  "verbose": false,
}
`;

exports[`parseClientCommand watch cmd:   'phero-client watch http://localhost:1234 --verbose --port 4321' 1`] = `
Object {
  "name": "watch",
  "port": 4321,
  "server": Object {
    "url": "http://localhost:1234",
  },
  "verbose": true,
}
`;

exports[`parseClientCommand watch cmd:   'phero-client watch http://localhost:1234' 1`] = `
Object {
  "name": "watch",
  "port": 4040,
  "server": Object {
    "url": "http://localhost:1234",
  },
  "verbose": false,
}
`;

exports[`parseClientCommand watch cmd:   'phero-client watch' 1`] = `
Object {
  "name": "watch",
  "port": 4040,
  "server": Object {
    "url": "http://localhost:3030",
  },
  "verbose": false,
}
`;

exports[`parsePheroCommand client cmd:   'phero client watch --port 1234' 1`] = `
Object {
  "argv": Array [
    "watch",
    "--port",
    "1234",
  ],
  "name": "client",
}
`;

exports[`parsePheroCommand client cmd:   'phero client watch' 1`] = `
Object {
  "argv": Array [
    "watch",
  ],
  "name": "client",
}
`;

exports[`parsePheroCommand common cmd:   'phero --help' 1`] = `
Object {
  "command": undefined,
  "name": "help",
}
`;

exports[`parsePheroCommand common cmd:   'phero --version' 1`] = `
Object {
  "name": "version",
}
`;

exports[`parsePheroCommand common cmd:   'phero -h' 1`] = `
Object {
  "command": undefined,
  "name": "help",
}
`;

exports[`parsePheroCommand common cmd:   'phero -v' 1`] = `
Object {
  "name": "version",
}
`;

exports[`parsePheroCommand dev-env cmd:   'phero' 1`] = `
Object {
  "name": "dev-env",
  "verbose": false,
}
`;

exports[`parsePheroCommand server cmd:   'phero server serve --port 1234' 1`] = `
Object {
  "argv": Array [
    "serve",
    "--port",
    "1234",
  ],
  "name": "server",
}
`;

exports[`parsePheroCommand server cmd:   'phero server serve' 1`] = `
Object {
  "argv": Array [
    "serve",
  ],
  "name": "server",
}
`;

exports[`parseServerCommand build cmd:   'phero-server build --help' 1`] = `
Object {
  "command": "build",
  "name": "help",
}
`;

exports[`parseServerCommand build cmd:   'phero-server build --verbose' 1`] = `
Object {
  "name": "build",
  "verbose": true,
}
`;

exports[`parseServerCommand build cmd:   'phero-server build -h' 1`] = `
Object {
  "command": "build",
  "name": "help",
}
`;

exports[`parseServerCommand build cmd:   'phero-server build' 1`] = `
Object {
  "name": "build",
  "verbose": false,
}
`;

exports[`parseServerCommand common cmd:   'phero-server --help' 1`] = `
Object {
  "command": undefined,
  "name": "help",
}
`;

exports[`parseServerCommand common cmd:   'phero-server --version' 1`] = `
Object {
  "name": "version",
}
`;

exports[`parseServerCommand common cmd:   'phero-server -h' 1`] = `
Object {
  "command": undefined,
  "name": "help",
}
`;

exports[`parseServerCommand common cmd:   'phero-server -v' 1`] = `
Object {
  "name": "version",
}
`;

exports[`parseServerCommand export cmd:   'phero-server export --help' 1`] = `
Object {
  "command": "export",
  "name": "help",
}
`;

exports[`parseServerCommand export cmd:   'phero-server export --verbose' 1`] = `
Object {
  "name": "export",
  "verbose": true,
}
`;

exports[`parseServerCommand export cmd:   'phero-server export -h' 1`] = `
Object {
  "command": "export",
  "name": "help",
}
`;

exports[`parseServerCommand export cmd:   'phero-server export' 1`] = `
Object {
  "name": "export",
  "verbose": false,
}
`;

exports[`parseServerCommand serve cmd:   'phero-server serve --help' 1`] = `
Object {
  "command": "serve",
  "name": "help",
}
`;

exports[`parseServerCommand serve cmd:   'phero-server serve --port 1234' 1`] = `
Object {
  "name": "serve",
  "port": 1234,
  "verbose": false,
}
`;

exports[`parseServerCommand serve cmd:   'phero-server serve --verbose' 1`] = `
Object {
  "name": "serve",
  "port": 3030,
  "verbose": true,
}
`;

exports[`parseServerCommand serve cmd:   'phero-server serve -h' 1`] = `
Object {
  "command": "serve",
  "name": "help",
}
`;

exports[`parseServerCommand serve cmd:   'phero-server serve -p 1234 --verbose' 1`] = `
Object {
  "name": "serve",
  "port": 1234,
  "verbose": true,
}
`;

exports[`parseServerCommand serve cmd:   'phero-server serve -p 1234' 1`] = `
Object {
  "name": "serve",
  "port": 1234,
  "verbose": false,
}
`;

exports[`parseServerCommand serve cmd:   'phero-server serve' 1`] = `
Object {
  "name": "serve",
  "port": 3030,
  "verbose": false,
}
`;
